--- a/Google.Cast/nuget/Xamarin.Google.iOS.Cast.nuspec
+++ b/Google.Cast/nuget/Xamarin.Google.iOS.Cast.nuspec
@@ -4,13 +4,13 @@
     <id>Xamarin.Google.iOS.Cast</id>
     <title>Google APIs Cast iOS Library</title>
     <version>4.0.2.0</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Cast iOS Library</description>
-    <copyright>Copyright 2015-2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/googleioscast</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/googleioscast</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865570</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865574</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleioscast_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
