--- a/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
+++ b/Firebase.Analytics/nuget/Xamarin.Firebase.iOS.Analytics.nuspec
@@ -4,13 +4,13 @@
     <id>Xamarin.Firebase.iOS.Analytics</id>
     <title>Firebase APIs Analytics iOS Library</title>
     <version>4.0.4.0</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Analytics iOS Library</description>
-    <copyright>Copyright 2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/firebaseiosanalytics</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/firebaseiosanalytics</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865559</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865564</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosanalytics_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
