--- a/Firebase.Auth/nuget/Xamarin.Firebase.iOS.Auth.nuspec
+++ b/Firebase.Auth/nuget/Xamarin.Firebase.iOS.Auth.nuspec
@@ -4,13 +4,13 @@
     <id>Xamarin.Firebase.iOS.Auth</id>
     <title>Firebase APIs Auth iOS Library</title>
     <version>4.2.1.0</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Auth iOS Library</description>
-    <copyright>Copyright 2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/firebaseiosauth</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/firebaseiosauth</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865530</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865534</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosauth_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
