--- a/Firebase.Core/nuget/Xamarin.Firebase.iOS.Core.nuspec
+++ b/Firebase.Core/nuget/Xamarin.Firebase.iOS.Core.nuspec
@@ -4,13 +4,13 @@
     <id>Xamarin.Firebase.iOS.Core</id>
     <title>Firebase APIs Core iOS Library</title>
     <version>4.0.8.0</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Core iOS Library</description>
-    <copyright>Copyright 2016 Microsoft</copyright>
-    <projectUrl>https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Firebase.Core</projectUrl>
-    <licenseUrl>https://github.com/xamarin/GoogleApisForiOSComponents/blob/master/Firebase.Core/License.md/</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865529</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865533</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseioscore_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
