--- a/Firebase.DynamicLinks/nuget/Xamarin.Firebase.iOS.DynamicLinks.nuspec
+++ b/Firebase.DynamicLinks/nuget/Xamarin.Firebase.iOS.DynamicLinks.nuspec
@@ -4,13 +4,13 @@
     <id>Xamarin.Firebase.iOS.DynamicLinks</id>
     <title>Firebase APIs Dynamic Links iOS Library</title>
     <version>2.1.0.0</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Firebase APIs Dynamic Links iOS Library</description>
-    <copyright>Copyright 2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/firebaseiosdynamiclinks</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/firebaseiosdynamiclinks</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865537</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865541</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/firebaseiosdynamiclinks_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
