--- a/Google.AppInvite/nuget/Xamarin.Google.iOS.AppInvite.nuspec
+++ b/Google.AppInvite/nuget/Xamarin.Google.iOS.AppInvite.nuspec
@@ -1,27 +1,27 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>Xamarin.Google.iOS.AppInvite</id>
     <title>Google APIs App Invite iOS Library</title>
     <version>1.0.2.4</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Google APIs App Invite iOS Library</description>
-    <copyright>Copyright 2015-2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/googleiosappinvite</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/googleiosappinvite</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865569</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865573</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosappinvite_128x128.png</iconUrl>
     <dependencies>
-      <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-      <dependency id="Xamarin.Google.iOS.Core" version="2.0.4.1"/>
-      <dependency id="Xamarin.Google.iOS.SignIn" version="3.0.0.1"/>
+      <dependency id="Xamarin.Build.Download" version="0.4.3" />
+      <dependency id="Xamarin.Google.iOS.Core" version="2.0.4.1" />
+      <dependency id="Xamarin.Google.iOS.SignIn" version="3.0.0.1" />
     </dependencies>
   </metadata>
   <files>
     <file src="output/Google.AppInvite.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.AppInvite/Google.AppInvite.targets" target="build/Xamarin.Google.iOS.AppInvite.targets"  />
+    <file src="source/Google.AppInvite/Google.AppInvite.targets" target="build/Xamarin.Google.iOS.AppInvite.targets" />
   </files>
 </package>
