--- a/Google.Core/nuget/Xamarin.Google.iOS.Core.nuspec
+++ b/Google.Core/nuget/Xamarin.Google.iOS.Core.nuspec
@@ -4,13 +4,13 @@
     <id>Xamarin.Google.iOS.Core</id>
     <title>Google APIs Core iOS Library</title>
     <version>3.1.0.0</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Core iOS Library</description>
-    <copyright>Copyright 2015-2016 Microsoft</copyright>
-    <projectUrl>https://github.com/xamarin/GoogleApisForiOSComponents/tree/master/Google.Core</projectUrl>
-    <licenseUrl>https://github.com/xamarin/GoogleApisForiOSComponents/blob/master/Google.Core/License.md/</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865540</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865543</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleioscore_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
