--- a/Google.GoogleCloudMessaging/nuget/Xamarin.Google.iOS.GoogleCloudMessaging.nuspec
+++ b/Google.GoogleCloudMessaging/nuget/Xamarin.Google.iOS.GoogleCloudMessaging.nuspec
@@ -1,27 +1,27 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>Xamarin.Google.iOS.GoogleCloudMessaging</id>
     <title>Google APIs Google Cloud Messaging iOS Library</title>
     <version>1.2.0.1</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Google Cloud Messaging iOS Library</description>
-    <copyright>Copyright 2015-2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/googleiosgcm</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/googleiosgcm</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865561</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865565</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosgcm_128x128.png</iconUrl>
     <dependencies>
-      <dependency id="Xamarin.Build.Download" version="0.4.3"/>
-      <dependency id="Xamarin.Google.iOS.Core" version="2.0.4.1"/>
-      <dependency id="Xamarin.Google.iOS.InstanceID" version="1.2.1.1"/>
+      <dependency id="Xamarin.Build.Download" version="0.4.3" />
+      <dependency id="Xamarin.Google.iOS.Core" version="2.0.4.1" />
+      <dependency id="Xamarin.Google.iOS.InstanceID" version="1.2.1.1" />
     </dependencies>
   </metadata>
   <files>
     <file src="output/Google.GoogleCloudMessaging.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.GoogleCloudMessaging/Google.GoogleCloudMessaging.targets" target="build/Xamarin.Google.iOS.GoogleCloudMessaging.targets"  />
+    <file src="source/Google.GoogleCloudMessaging/Google.GoogleCloudMessaging.targets" target="build/Xamarin.Google.iOS.GoogleCloudMessaging.targets" />
   </files>
 </package>
