--- a/Google.Places/nuget/Xamarin.Google.iOS.Places.nuspec
+++ b/Google.Places/nuget/Xamarin.Google.iOS.Places.nuspec
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
     <id>Xamarin.Google.iOS.Places</id>
     <title>Google APIs Places iOS Library</title>
     <version>2.5.0.0</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Places iOS Library</description>
-    <copyright>Copyright 2015-2017 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/googleiosplaces</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/googleiosplaces</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865542</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865547</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosplaces_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
