--- a/Google.TagManager/nuget/Xamarin.Google.iOS.TagManager.nuspec
+++ b/Google.TagManager/nuget/Xamarin.Google.iOS.TagManager.nuspec
@@ -4,13 +4,13 @@
     <id>Xamarin.Google.iOS.TagManager</id>
     <title>Google APIs Tag Manager iOS Library</title>
     <version>6.0.0.1</version>
-    <authors>Xamarin Inc.</authors>
-    <owners>Xamarin Inc.</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>C# bindings for Google APIs Tag Manager iOS Library</description>
-    <copyright>Copyright 2015-2016 Microsoft</copyright>
-    <projectUrl>https://components.xamarin.com/view/googleiostagmanager</projectUrl>
-    <licenseUrl>https://components.xamarin.com/license/googleiostagmanager</licenseUrl>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
+    <projectUrl>https://go.microsoft.com/fwlink/?linkid=865539</projectUrl>
+    <licenseUrl>https://go.microsoft.com/fwlink/?linkid=865544</licenseUrl>
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiostagmanager_128x128.png</iconUrl>
     <dependencies>      
       <group targetFramework="Xamarin.iOS10">
