--- a/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.targets
+++ b/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.targets
@@ -1,4 +1,28 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <PropertyGroup>
+        <_FirebaseCloudFirestoreAssemblyName>Firebase.CloudFirestore, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCloudFirestoreAssemblyName>
+        <_FirebaseCloudFirestoreItemsFolder>FCldF-0.8.0</_FirebaseCloudFirestoreItemsFolder>
+    </PropertyGroup>
+    <ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
+        <XamarinBuildDownload Include="$(_FirebaseCloudFirestoreItemsFolder)">
+            <Url>https://dl.google.com/dl/cpdc/60065cc9fa4f0be0/FirebaseFirestore-0.8.0.tar.gz</Url>
+            <Kind>Tgz</Kind>
+        </XamarinBuildDownload>
+        <XamarinBuildRestoreResources Include="_FirebaseCloudFirestoreItemsFolder" />
+    </ItemGroup>
+    <Target Name="_FirebaseCloudFirestoreItemsFolder">
 
+        <PropertyGroup>
+            <_FirebaseCloudFirestoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCloudFirestoreItemsFolder)\Frameworks\</_FirebaseCloudFirestoreSDKBaseFolder>
+        </PropertyGroup>
+
+        <ItemGroup>
+            <RestoreAssemblyResource Include="$(_FirebaseCloudFirestoreSDKBaseFolder)FirebaseFirestore.framework\FirebaseFirestore">
+                <LogicalName>FirebaseCloudFirestore</LogicalName>
+                <AssemblyName>$(_FirebaseCloudFirestoreAssemblyName)</AssemblyName>
+            </RestoreAssemblyResource>
+        </ItemGroup>
+
+    </Target>
 </Project>
