--- a/Firebase.Core/source/Firebase.Core/Firebase.Core.targets
+++ b/Firebase.Core/source/Firebase.Core/Firebase.Core.targets
@@ -2,16 +2,16 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseCoreAssemblyName>Firebase.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCoreAssemblyName>
-		<_FirebaseCoreItemsFolder>FCr-4.0.8</_FirebaseCoreItemsFolder>
+		<_FirebaseCoreItemsFolder>FCr-4.0.13</_FirebaseCoreItemsFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseCoreItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/a62ba73f1f65cd7b/FirebaseCore-4.0.8.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/f55826b378876394/FirebaseCore-4.0.13.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_FirebaseCoreItemsFolder" />
+		<XamarinBuildRestoreResources Include="_FirebaseCoreItems" />
 	</ItemGroup>
-	<Target Name="_FirebaseCoreItemsFolder">
+	<Target Name="_FirebaseCoreItems">
 
 		<PropertyGroup>
 			<_FirebaseCoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseCoreItemsFolder)\Frameworks\</_FirebaseCoreSDKBaseFolder>
@@ -20,14 +20,6 @@
 		<ItemGroup>
 			<RestoreAssemblyResource Include="$(_FirebaseCoreSDKBaseFolder)FirebaseCore.framework\FirebaseCore">
 				<LogicalName>FirebaseCore</LogicalName>
-				<AssemblyName>$(_FirebaseCoreAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_FirebaseCoreSDKBaseFolder)FirebaseCoreDiagnostics.framework\FirebaseCoreDiagnostics">
-                <LogicalName>FirebaseCoreDiagnostics</LogicalName>
-                <AssemblyName>$(_FirebaseCoreAssemblyName)</AssemblyName>
-            </RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_FirebaseCoreSDKBaseFolder)FirebaseNanoPB.framework\FirebaseNanoPB">
-                <LogicalName>FirebaseNanoPB</LogicalName>
 				<AssemblyName>$(_FirebaseCoreAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 		</ItemGroup>
