--- a/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.targets
+++ b/Firebase.Analytics/source/Firebase.Analytics/Firebase.Analytics.targets
@@ -3,12 +3,12 @@
 
 	<PropertyGroup>
 		<_FirebaseAnalyticsAssemblyName>Firebase.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAnalyticsAssemblyName>
-		<_FirebaseAnalyticsItemsFolder>FAnlytcs-4.0.4</_FirebaseAnalyticsItemsFolder>
+		<_FirebaseAnalyticsItemsFolder>FAnlytcs-4.0.5</_FirebaseAnalyticsItemsFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseAnalyticsItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/15a4dd6c971f8bbf/FirebaseAnalytics-4.0.4.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/ef446566d2b6c158/FirebaseAnalytics-4.0.5.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FirebaseAnalyticsItems"/>
@@ -25,6 +25,14 @@
 				<LogicalName>FirebaseAnalytics</LogicalName>
 				<AssemblyName>$(_FirebaseAnalyticsAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
+            <RestoreAssemblyResource Include="$(_FirebaseCoreSDKBaseFolder)FirebaseCoreDiagnostics.framework\FirebaseCoreDiagnostics">
+                <LogicalName>FirebaseCoreDiagnostics</LogicalName>
+                <AssemblyName>$(_FirebaseCoreAssemblyName)</AssemblyName>
+            </RestoreAssemblyResource>
+            <RestoreAssemblyResource Include="$(_FirebaseCoreSDKBaseFolder)FirebaseNanoPB.framework\FirebaseNanoPB">
+                <LogicalName>FirebaseNanoPB</LogicalName>
+                <AssemblyName>$(_FirebaseCoreAssemblyName)</AssemblyName>
+            </RestoreAssemblyResource>
 		</ItemGroup>
 		
 	</Target>
